objects/ssot__PromotionStage__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Promotion Stage Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionId__c</fullName>
        <label>Promotion</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionStageType__c</fullName>
        <label>Promotion Stage Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferredPartyJournalSubTypeId__c</fullName>
        <label>Referred Party Journal Subtype</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferrerJournalSubTypeId__c</fullName>
        <label>Referrer Journal Subtype</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceNumber__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StageConfigurationText__c</fullName>
        <label>Stage Configuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729831692138_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PromotionStage_ReferrerJournalSubTyp_rel</label>
        <referenceTo>ssot__LoyaltyJournalSubtype__dlm</referenceTo>
        <relationshipLabel>PromotionStage_ReferrerJournalSubTyp_rel</relationshipLabel>
        <relationshipName>rel_1729831692138_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729831695189_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PromotionStage_ReferredPartyJournalS_rel</label>
        <referenceTo>ssot__LoyaltyJournalSubtype__dlm</referenceTo>
        <relationshipLabel>PromotionStage_ReferredPartyJournalS_rel</relationshipLabel>
        <relationshipName>rel_1729831695189_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731659062149_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PromotionStage_PromotionId_map_Promo_rel</label>
        <referenceTo>ssot__Promotion__dlm</referenceTo>
        <relationshipLabel>PromotionStage_PromotionId_map_Promo_rel</relationshipLabel>
        <relationshipName>rel_1731659062149_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>